samples/_failures_safe/1761453900_c54ff8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7075009.c: In function ‘main’:
./samples/SAFE/__tmp_d7075009.c:155:12: error: missing terminating " character
  155 |     printf("\n=== Filtered Log Entries ===\
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d7075009.c:155:5: error: expected expression at end of input
  155 |     printf("\n=== Filtered Log Entries ===\
      |     ^~~~~~
./samples/SAFE/__tmp_d7075009.c:155:5: error: expected declaration or statement at end of input
